--- a/card.css
+++ b/card.css
@@ -9,3 +9,22 @@ body{
    align-items: center;
    justify-content: center;
 }
+.card{
+   background: white;
+   border-radius: 15px;
+   width: 300px;
+   text-align: center;
+   position: relative;
+}
+.card-header img{
+   width: 100px;
+   height: 100px;
+   margin-top: 20px;
+   border-radius: 50%;
+}
+.card-body{
+   padding: 15px;
+}
+.card-body h2{
+   margin-bottom: 5px;
+}
